--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,11 @@ insert_final_newline = true
 indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
+ij_any_spaces_within_array_initializer_braces = true
+ij_java_do_not_wrap_after_single_annotation = true
+ij_java_field_annotation_wrap = off
+ij_java_use_single_class_imports = true
+max_line_length = 120
 
 [*.yml]
 indent_size = 2
