--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,8 @@ trim_trailing_whitespace = true
 ij_any_spaces_within_array_initializer_braces = true
 ij_java_do_not_wrap_after_single_annotation = true
 ij_java_field_annotation_wrap = off
-ij_java_use_single_class_imports = true
+ij_java_class_count_to_use_import_on_demand = 999
+ij_java_names_count_to_use_import_on_demand = 999
 max_line_length = 120
 
 [*.yml]
