--- a/.editorconfig
+++ b/.editorconfig
@@ -2,16 +2,18 @@ root = true
 
 [*]
 end_of_line = lf
+ij_any_spaces_within_array_initializer_braces = true
 insert_final_newline = true
 indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
-ij_any_spaces_within_array_initializer_braces = true
+max_line_length = 120
+
+[*.java]
+ij_any_field_annotation_wrap = off
 ij_java_do_not_wrap_after_single_annotation = true
-ij_java_field_annotation_wrap = off
 ij_java_class_count_to_use_import_on_demand = 999
 ij_java_names_count_to_use_import_on_demand = 999
-max_line_length = 120
 
 [*.yml]
 indent_size = 2
