--- a/src/main/resources/config-langs/fr.yml
+++ b/src/main/resources/config-langs/fr.yml
@@ -11,7 +11,7 @@ config:
     Valeurs disponibles: en (Anglais), de (Allemande), es (Espagnol), fr (Français), it (Italien), ru (Russe), zh (Chinois)
   updateCheck: |
     Activer la cherche de mises à jour.  Si oui, veuillez préciser quel service à y utiliser pour vérifier les mises à jour ; si non, préciser « None ».
-    Services disponibles : GitHub, Snapshots, Spigot, None [GitHub]   
+    Services disponibles : GitHub, Snapshots, Spigot, None [GitHub]
   autosave: "Intervale de la sauvegarde automatique en minutes [10]"
   pluginPrefix: "Préfixe utilisé avec les messages BreweryX"
   debug: "Afficher les messages de débogue dans le journal du serveur (log) [false]"
@@ -53,6 +53,12 @@ config:
   sealingTableBlock: |
     Par défaut, Brewery utilise le bloc « SMOKER » comme table de scellage des boissons ; ce paramètre vous permet de le changer.
     IMPORTANT : Il est nécessaire que le bloc choisi est un conteneur — signifiant un bloc qui peur stocker des objets (e.g., SMOKER, CHEST, BLAST_FURNACE).
+  enableSplashableBrews: |
+    Enables or disables the ability to convert brews into splash potions.
+    Splash potions can be created by using gunpowder instead of glowstone in distillers. [true]
+  splashableBrewPotencyReduction: |
+    Brewery will reduce the alcohol content of a thrown brew by the percentage specified here.
+    0.75 means the brew will have 75% of its original alcohol content when thrown (1.0 = 100%). [1.0]
   alwaysShowQuality: "Toujours montrer les 1-5 étoiles sur les objets en fonction de leur qualité. S’ils sont faux, ils n’apparaîtront que lors de l’infusion. [true]"
   alwaysShowAlc: "Toujours indiquer la teneur en alcool sur les objets. S’il est false, il n’apparaîtra que dans le stand de brassage. [false]"
   showBrewer: "Si le brasseur de la boisson devrait être montré. [false]"
@@ -122,9 +128,9 @@ config:
 recipesFile:
   header: |
     -- Recettes pour les boissons --
-    
+
     Une guide pour cette section peut se trouver au wiki à cette addresse web : https://brewery.lumamc.net/guide/recipies/
-    
+
     enabled: « true » si la recette serait activée, « false » si elle devrait être désactivée
     name : Différents noms pour la mauvaise/moyen/bonne qualité (Les codes de mise en forme sont pris en charge : comme par exemple &6 pour la couleur Or.)
     ingredients : Liste des 'matériaux/montant'
